--- a/views/admin/addCategory.hbs
+++ b/views/admin/addCategory.hbs
@@ -13,7 +13,7 @@
         <div class="row mb-3">
           <label for="inputNumber" class="col-sm-2 col-form-label">File Upload</label>
           <div class="col-sm-8 d-flex">
-            <div style="display: none;" id="imageShow"><img id="blah" src="#" alt="your image" /></div>
+            <div style="display: none;" id="imageShow"><img id="blah" src="#" alt="your image" / style="height:150px;"></div>
             <div>
               <input class="form-control p-5 ms-5" type="file" id="formFile" name="image"
                 accept="image/gif, image/jpeg, image/png" required>
