Admin Login Page Validation Completed

--- a/views/admin/addCategory.hbs
+++ b/views/admin/addCategory.hbs
@@ -7,9 +7,11 @@
         <div class="row mb-3">
           <label for="inputText" class="col-sm-2  col-form-label">Category Name</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" name="category" required>
+            <input type="text" class="form-control" name="category" onkeyup="checkForm()" id="categoryField"  required>
+             <p id="errMsg" class="text-danger"></p>
           </div>
         </div>
+
         <div class="row mb-3">
           <label for="inputNumber" class="col-sm-2 col-form-label">File Upload</label>
           <div class="col-sm-8 d-flex">
@@ -29,6 +31,18 @@
     </div>
   </section>
 </main>
+
+       <script>
+            function checkForm() {
+              document.getElementById('errMsg').innerHTML = ""
+              brandName = document.getElementById('categoryField').value
+              brandName = brandName.trim();
+              if (brandName == "" || brandName == null) {
+                document.getElementById('errMsg').innerHTML = "field cannot be blank"
+              }
+            }
+          </script>
+
 <script>
   formFile.onchange = evt => {
     const [file] = formFile.files
