--- a/views/admin/viewCategory.hbs
+++ b/views/admin/viewCategory.hbs
@@ -25,7 +25,7 @@
           <tr>
             <th scope="row">{{plusOne @index}}</th>
             <td>{{category}}</td>
-            <td><img style="height:50px ;width:50px ;" src="/categoryImages/{{this._id}}.jpg" alt=""></td>
+            <td><img style="height:50px ;width:50px ;" src="/pictures/categoryImages/{{this.image}}" alt=""></td>
             {{!-- <td><img style="height:50px ;width:50px ;" src="/productImages/{{this._id}}.jpg" alt=""></td> --}}
             <td><a class="btn btn-primary" href="/admin/editCategory/{{this._id}}">Edit</a>
               <a href="/admin/deleteCategory/{{this._id}}" class="btn btn-outline-danger"
