--- a/views/admin/editBrand.hbs
+++ b/views/admin/editBrand.hbs
@@ -26,26 +26,23 @@
         </div>
         <div class="row mb-3">
           <label for="inputText" class="col-sm-2  col-form-label">Brand Image</label>
-          <div class="col-sm-5">
-            <input type="file" class="form-control p-5" name="image" accept="image/gif, image/jpeg, image/png"
-              id="brandImageFile" required>
-          </div>
-          <div class="col-md-4">
-            <div style="display: none;" id="imageShow"><img id="blah" src="#" alt="your image" / style="height:150px;">
+
+          <div class="col-md-2">
+            <div style="display: block;" id="imageShow"><img id="imageView" src="/pictures/brandImages/{{brand.image}}" alt="" style="width:200px; height: 200px;">
             </div>
           </div>
+          <div class="col-sm-3">
+            <h6></h6>
+            <input class="form-control p-5 m-5 text-warning" type="file" id="formFile" name="image"
+              value="" accept="image/gif, image/jpeg, image/png" onchange="viewImage(event)">
+          </div>
         </div>
-
-
-        <script>
-          brandImageFile.onchange = evt => {
-            const [file] = brandImageFile.files
-            if (file) {
-              imageShow.style.display = 'block';
-              blah.src = URL.createObjectURL(file)
-            }
-          }
-        </script>
+<script>
+  function viewImage(event) {
+    document.getElementById('imageView').src = URL.createObjectURL(event.target.files[0])
+  }
+</script>
+       
         <div class="col-sm-10 text-center">
           <button type="submit" class="btn btn-primary">Submit Form</button>
         </div>
